<resources>
    <string name="app_name">AvansTV</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="popular">Popular</string>
    <string name="featured_movie">Featured movie</string>
    <string name="suggested">Top rated movies</string>
    <string name="featured_genres_text" translatable="false">Genres</string>
    <string name="featured_language_text">Language</string>
    <string name="featured_date_text">Date</string>
    <string name="featured_title_text">Title</string>
    <string name="title_placeholder">Title placeholder</string>
    <string name="rating_placeholder" translatable="false">Rating placeholder</string>
    <string name="category_placeholder" translatable="false">Category placeholder</string>
    <string name="description_placeholder" translatable="false">Description placeholder</string>
    <string name="movies_loaded_txt">Loaded movies</string>
    <string name="featured_language">Language:\u0020</string>
    <string name="back_btn_txt">Back to the home screen</string>
    <string name="description_title_txt">Description</string>
    <string name="star_image_description" translatable="false">Image of a star for ratings</string>
    <string name="favorite_image_description" translatable="false">Image of a heart</string>
    <string name="username_placeholder">Username</string>
    <string name="thumbnail_description" translatable="false">Thumbnail of the movie</string>
    <string name="list_input_hint">Enter list name here</string>
    <string name="create_list_button">Create</string>

    <!-- Preferences -->
    <string name="theme_title">Theme</string>
    <string name="theme_on">Darkmode turned on</string>
    <string name="theme_off">Lightmode turned on</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="favorite_movies">Favorite movies</string>
    <string name="favorite_lists">Favorite lists</string>
    <string name="date_placeholder">Date placeholder</string>
    <string name="more_movies_btn_txt">Load more movies</string>
    <string name="query_hint">Search for a movie</string>
    <string name="no_list_available">There are no lists available</string>
    <string name="filter_button_description" translatable="false">Button for filter options</string>
    <string name="add_to_list_text">Add</string>
    <string name="add_to_a_list">Add to a list:</string>
    <string name="cast">Cast</string>
    <string name="added">"Added "</string>
    <string name="to">" to "</string>
    <string name="cast_name_txt">Cast name</string>
    <string name="remove_list_toast">Removed list</string>
    <string name="no_lists_available">There are no lists available.</string>
    <string name="filter" translatable="false">Filter</string>
    <string name="order">Order</string>
    <string name="order_title">Sort by title</string>
    <string name="order_time">Sort by date</string>
    <string name="remove_movie_toast">Removed movie</string>
    <string name="swipe_left_to_remove_movie">Swipe left to remove movie</string>
    <string name="reset_filters">Reset filters</string>
    <string name="failed_to_load">Failed to load trailer!</string>
    <string name="personal_rating_text">Give this movie a personal rating:</string>
</resources>