<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/home_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:textColor="@color/secondary"
                    android:textSize="26sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:id="@+id/suggest_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/featured_movie"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_randomMovie"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                app:cardBackgroundColor="@color/secondary"
                app:cardCornerRadius="10dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/suggest_header">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/featured_title_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/featured_title_text"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_random_movie"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/featured_date_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/featured_date_text"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_random_movie"
                        app:layout_constraintTop_toBottomOf="@+id/featured_title_id" />

                    <TextView
                        android:id="@+id/featured_language_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/featured_language_text"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_random_movie"
                        app:layout_constraintTop_toBottomOf="@+id/featured_date_id" />

                    <TextView
                        android:id="@+id/featured_genres_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/featured_genres_text"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_random_movie"
                        app:layout_constraintTop_toBottomOf="@+id/featured_language_id" />

                    <ImageView
                        android:id="@+id/img_random_movie"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/Popular_movie_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/popular"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/card_randomMovie" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/Popular_movie_textview" />

            <TextView
                android:id="@+id/suggested_movie_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/suggested"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/Popular_movie_textview"
                app:layout_constraintTop_toBottomOf="@+id/rv_popular" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_TopRated"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/suggested_movie_header"
                tools:layout_editor_absoluteX="30dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>