<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_explore"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/secondary"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/secondary">

            <TextView
                android:id="@+id/explore_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/featured_title_text"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_explore_movie"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/explore_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/featured_date_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_explore_movie"
                app:layout_constraintTop_toBottomOf="@+id/explore_title" />

            <TextView
                android:id="@+id/explore_rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/rating_placeholder"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/img_explore_movie"
                app:layout_constraintTop_toBottomOf="@+id/explore_date" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toEndOf="@+id/explore_rating"
                app:layout_constraintTop_toBottomOf="@+id/explore_date"
                app:srcCompat="@drawable/ic_star_light" />

            <ImageView
                android:id="@+id/img_explore_movie"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/thumbnail_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>