<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Presentation.FavoritesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:paddingTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/Favorite_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite"
                    android:textColor="@color/secondary"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/favorites_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/favorite_movies"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <LinearLayout
                android:id="@+id/favorite_movies_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingTop="16dp"
                android:paddingEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorites_header">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:backgroundTint="@color/secondary"
                    app:cardCornerRadius="10dp">

                    <ImageButton
                        android:id="@+id/favorite_movie_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        android:contentDescription="@string/thumbnail_description"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:backgroundTint="@color/secondary"
                    app:cardCornerRadius="10dp">

                    <ImageButton
                        android:id="@+id/favorite_movie_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        android:contentDescription="@string/thumbnail_description"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:backgroundTint="@color/secondary"
                    app:cardCornerRadius="10dp">

                    <ImageButton
                        android:id="@+id/favorite_movie_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        android:contentDescription="@string/thumbnail_description"
                        android:scaleType="centerCrop" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <TextView
                android:id="@+id/favorite_list_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:text="@string/favorite_lists"
                android:textColor="@color/text"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/favorites_header"
                app:layout_constraintTop_toBottomOf="@+id/favorite_movies_section" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:clickable="true"
                android:contentDescription="@string/create_list_button"
                android:focusable="true"
                android:src="@android:drawable/ic_input_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite_movies_section" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorites_list_section1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingStart="30dp"
                android:paddingTop="16dp"
                android:paddingEnd="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/favorite_list_header">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>